test/sema/generic-function-failed-instantiation.delta.output
generic-function-failed-instantiation.delta:5:14: error: invalid operands 'bool' and 'int' to '<'
    return t < 3;
             ^
