test/sema/generic-function-failed-instantiation.delta
// RUN: %check_errors %not %delta -typecheck %s

bool foo<T>(T t) {
    // CHECK: [[@LINE+1]]:14: error: invalid operands 'bool' and 'int' to '<'
    return t < 3;
}

void main() {
    _ = foo(false);
}
